# medical_chatBot

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  store_index.py  template.py
medical_chatbot/: config.py  prompt.py
medical_chatbot/indexer/: constants.py  index_manager.py
medical_chatbot/utils/: embedding_utils.py  helper.py  pinecone_utils.py
research/: trials.ipynb
